--- a/master-plan.org
+++ b/master-plan.org
@@ -196,3 +196,57 @@ graphs is a shard of a person, persona or role which we call a
 
 
 ** Inanimate
+* On Being the Right Size
+
+Haldane's thesis is that sheer size very often defines what
+bodily equipment an animal must have:
+
+#+begin_quote
+"Insects, being so small, do not have oxygen-carrying
+bloodstreams. What little oxygen their cells require can be
+absorbed by simple diffusion of air through their
+bodies. But being larger means an animal must take on
+complicated oxygen pumping and distributing systems to reach
+all the cells."
+#+end_quote
+
+But this is just as much about the limits of human cognition
+-- we only have so much ram, can only keep so many things in
+our head at one time -- we have short term, medium term and
+long term memory.  We can only relate to so many other
+people, we can only make friends with so many people.  We
+can only empathize at small scales -- one person is a
+tragedy, a million a statistic.
+
+We see the world at newtonian scales where the universe is
+quantum.
+
+ - 4-6 give or minus two
+ - 2 levels of separation
+
+** APL
+
+  | Region                    | 8,000,000 |
+  | City                      | 500,000   |
+  | Communities & small towns | 5-10,000  |
+  | Neighborhood              | 500-1000  |
+  | House Cluster/Work Group  | 30-50     |
+
+* Person Holons
+* Devices
+* Shops
+* World Wide Mesh
+
+* -- now lets work backwards
+
+** Multi-Planet Species
+ - earth
+ - luna
+ - mars
+ - asteroids
+** Independent Bioregions
+** Cities
+** Towns
+** Villages
+
+
