--- a/index.org
+++ b/index.org
@@ -26,7 +26,7 @@
 
 #+begin_quote
 This page describes documentation, team handbooks and technical
-specifications that are part of the Chenla Project.
+specifications at Chenla Labs.
 #+end_quote
 
 * Recent Activity
