--- a/rb-communications.org
+++ b/rb-communications.org
@@ -64,9 +64,35 @@ fast -> slow
 
 firehose -> otium
 
+* MMU Communication Patterns
+
+persistent vs transient
+
+  - static content publication :: bittorent, ftp
+     DHT/Swarm
+  - connection between identities :: voip, rtc
+     Raw P2P Connection
+  - transient datagrams :: email, twitter,  IM, irc
+      routing privacy is important
+      vulnerable to end-point analysis
+    - wholly directed :: im, email
+    - partially directed :: mailing list, usenet
+    - filterable global :: twitter, registries, content-search
+
+
+- [[https://www.youtube.com/watch?v=BrWlAtfqF6s][ÐΞVcon-0-Whisper: the Multi DHT Messaging System with Routing Privacy. Vision & Roadmap. - YouTube]]
+
+* Interruptions
+
+Interruptions can really fuck up your workflow -- takes 5-45 min to
+get back into the groove... so showing respect for others is /very/
+important. 
+
+* Hacker vs Manager's schedules
+
 * Internal Communications
 
-always use plain text -- if you /must/ send formated messages, you
+always use plain text -- if you /must/ send formated messages, use 
 multipart mime (plain text and html)
 
 * Devices
@@ -84,9 +110,27 @@ desktop/laptop --> long form
 
 * Etiquette
 
+ 
+* Style
 
+  - emoticons -- text, not graphic or unicode
+  - acronyms (LOL, ROFL, IANAL, NSFW)
 
-* Communication Channels
+* Security, Transparency & Accountability
+
+We're open, and distributed, so the vast majority of what we do is in
+the open, so secrecy is not really an burning issue.  However, because
+we are open, transparency /is/ important and by extension,
+accountability.
+
+ 
+
+  - keep different roles separate
+  - 
+
+* Communication Channels (1-to-one and 1-to-many)
+
+NOTE: look up etherium whisper video 
 
 ** Snail Mail
 ** Sneakernet
